# scanpy_leiden_openmp

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: ci.yml
cpp/: CMakeLists.txt
cpp/src/: adapter.cpp  adapter.hpp  bindings.cpp
scripts/: benchmark.py  compare_adata.py  run_leiden_adata.py  vendor_upstream.sh
src/scanpy_leiden_openmp/: __init__.py  _api.py  _backend.py  _patch.py
tests/: test_leiden_api.py  test_patch.py
