[build-system]
requires = ["scikit-build-core>=0.10", "pybind11>=2.12"]
build-backend = "scikit_build_core.build"

[project]
name = "scanpy-leiden-openmp"
version = "0.1.0"
description = "High-performance Leiden backend for Scanpy with OpenMP C++ core"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "scanpy-leiden-openmp contributors" }
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "packaging>=23.0",
  "pandas>=2.0",
  "scanpy>=1.10",
  "anndata>=0.10",
  "scikit-learn>=1.4",
  "leidenalg>=0.10",
  "igraph>=0.11",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
]

[tool.scikit-build]
wheel.packages = ["src/scanpy_leiden_openmp"]
cmake.minimum-version = "3.18"
cmake.build-type = "Release"
build-dir = "build/{wheel_tag}"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = true

